# murs

./: .gitignore  .travis.yml  404.html  Cargo.toml  README.md  attributes.html  contributors.html  deploy.sh  index.html  print.html  rolls.html  searchindex.js  searchindex.json  skills.html  sub_skills.html  test.html  thing.html  welcome.html
.github/workflows/: book.yml  tools.yml
book/: book.toml
book/src/: SUMMARY.md  attributes.md  contributors.md  rolls.md  skills.md  sub_skills.md  test.md  thing.md  welcome.md
core/: Cargo.toml
core/src/: cache.rs  lib.rs  unit.rs
core/src/module/: dependency.rs  mod.rs  model.rs  ruleset.rs
core/src/utils/: fs.rs  git.rs  hash.rs  mod.rs
modules/hello-world/: module.toml
mpk/: Cargo.toml
mpk/src/: main.rs
mpk/src/actions/: package.rs
mpk/src/models/: mod.rs  module.rs  unit.rs
notes/: dice_probabilities.md  library.md  module.md
refs/: toughness_hardness_strength.md
src/: Cargo.toml  Murs.sln
src/Murs.Core/: Murs.Core.csproj
src/Murs.Core/Models/: Thing.cs
src/murs/: Cargo.toml
src/src/: lib.rs
src/src/actions/: checkout.rs  clean.rs  mod.rs  package.rs  parse.rs  prepare.rs  resolve.rs
src/src/models/: library.rs  mod.rs  module.rs  unit.rs  volume.rs
src/src/resolved/: mod.rs  module.rs  unit.rs
src/src/utils/: fs.rs
tools/: Cargo.toml
tools/src/: lib.rs
volume/sample/latest/: module.toml
volume/sample/latest/units/: test.md
