[package]
name = "murs-core"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.132"
serde_derive = "1.0.132"
toml = "0.5.8"
semver = { version = "1.0.4", features = ["serde"] }
anyhow = "1.0.51"
schemars = "0.8.8"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
minimad = "0.9.0"
mdbook = "0.4.14"
tempfile = "3.2.0"
warp = "0.3.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
indicatif = "0.16.2"
directories = "4.0.1"
pathfinding = "3.0.5"
git2 = "0.13.25"
blake3 = "1.2.0"
async-recursion = "0.3.2"
uuid = "0.8.2"
