[package]
name = "mpk"
version = "0.1.0"
authors = ["skyne98 <ahalahan@gmail.com>"]
edition = "2018"

[[bin]]
name = "mpk"
path = "bin/mpk.rs"

[dependencies]
structopt = "0.3.21"
serde = "1.0.123"
serde_derive = "1.0.123"
toml = "0.5.8"
semver = { version="0.11.0", features=["serde"] }
anyhow = "1.0.38"
schemars = "0.8.0"
tokio = { version="1.7.1", features=["full"] }
tokio-stream = { version="0.1.6", features=["fs"] }
minimad = "0.8.0"
mdbook = "0.4.10"
tempfile = "3.2.0"
warp = "0.3.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
indicatif = "0.16.2"
directories = "3.0.2"
