[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mpk"
path = "bin/mpk.rs"

[dependencies]
core = { path = "../core" }
structopt = "0.3.25"
serde = "1.0.132"
serde_derive = "1.0.132"
toml = "0.5.8"
semver = { version = "1.0.4", features = ["serde"] }
anyhow = "1.0.52"
schemars = "0.8.8"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
minimad = "0.9.0"
mdbook = "0.4.14"
tempfile = "3.2.0"
warp = "0.3.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
indicatif = "0.16.2"
directories = "4.0.1"
pathfinding = "3.0.5"
